src/test/ui/moves/moves-based-on-type-block-bad.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/moves-based-on-type-block-bad.rs:24:19
   |
LL |             match hellothere.x { //~ ERROR cannot move out
   |                   ^^^^^^^^^^^^
   |                   |
   |                   cannot move out of borrowed content
   |                   help: consider borrowing here: `&hellothere.x`
...
LL |                 box E::Bar(x) => println!("{}", x.to_string()),
   |                            - data moved here
   |
note: move occurs because `x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait
  --> $DIR/moves-based-on-type-block-bad.rs:27:28
   |
LL |                 box E::Bar(x) => println!("{}", x.to_string()),
   |                            ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
